fix: Align colours in validation message and hint

--- a/src/components/ValidationMessage/ValidationMessage.module.scss
+++ b/src/components/ValidationMessage/ValidationMessage.module.scss
@@ -1,6 +1,6 @@
 .ValidationMessageContainer {
-  background-color: #d2691e33;
-  border: 1px solid #d2691e;
+  background-color: #f2792222;
+  border: 1px solid #f27922;
   border-radius: 4px;
   padding: 8px;
 
